# aegis

./: .env.example  .gitignore  .graphify_python  .graphify_uncached.txt  .graphifyignore  AEGIS_Project_Summary.docx  README.md  SETUP.md  docker-compose.yml  package-lock.json  package.json  render.yaml
.claude/: settings.local.json
.github/workflows/: auto-pr.yml  ci.yml
apps/api/: .dockerignore  .env.example  Dockerfile  main.py  pyproject.toml  requirements.txt
apps/api/app/: config.py  db.py  schemas.py
apps/api/app/routers/: analyze.py  chat.py  report.py  upload.py
apps/api/app/scripts/: backfill_report_locations.py
apps/api/app/services/: report.py  storage.py  video.py  vlm.py
apps/api/supabase/migrations/: 0001_create_videos_table.sql  0002_add_analyses_reports_chat.sql  0003_create_storage_bucket.sql  0004_add_assessment_metadata.sql  0005_add_frame_detections.sql  0006_ensure_frame_detections_column.sql  0007_add_chat_history.sql  0008_add_frame_image_url.sql
apps/desktop/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
apps/desktop/src/: App.tsx  index.css  vite-env.d.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: README.md
apps/desktop/src-tauri/src/: main.rs
apps/desktop/src/components/: Chat.tsx  Map.tsx  Report.tsx  VideoUpload.tsx
apps/desktop/src/lib/: api.ts  (+9 more)
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
(+36 files in other folders)
