[package]
name = "aegis-desktop"
version = "0.1.0"
description = "AEGIS disaster-assessment desktop app"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "aegis_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
custom-protocol = ["tauri/custom-protocol"]
